# fastapi_help

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  test_hotel_tool.py  test_map_tool.py  test_train_tool.py
app/: __init__.py  config.py  llm_factory.py
app/api/: main.py  routes.py  schemas.py
app/graph/: __init__.py  graph_builder.py  nodes.py
app/models/: __init__.py  state.py
app/prompts/: __init__.py  prompt_templates.py
app/storage/: __init__.py  redis_storage.py
app/tools/: __init__.py  base.py  hotel_tool.py  map_tool.py  mcp_client.py  train_tool.py
app/utils/: commute.py  constraint_parser.py  exceptions.py  location_parser.py  logger.py  risk_manager.py  slot_helpers.py  time_window.py  transfer_planner.py  transport_planner.py
docs/: 开发要求文档.docx
examples/: example_usage.py
